# Cloumask

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  PROJECT_DESCRIPTION.md  README.md  components.json  justfile  package-lock.json  package.json  playwright.config.ts  svelte.config.js  vite.config.ts  vitest.config.ts
backend/: Makefile  README.md  pyproject.toml  requirements-agent.txt  requirements-cv.txt  requirements-dev.txt  requirements.txt
backend/models/: README.md
backend/src/backend/: __init__.py
backend/src/backend/agent/: __init__.py  graph.py  state.py
backend/src/backend/agent/checkpoints/: __init__.py  manager.py  saver.py  schema.sql
backend/src/backend/api/: config.py  main.py
backend/src/backend/cv/: __init__.py  anonymization.py  anonymization_3d.py  base.py  detection.py  detection_3d.py  device.py  download.py  face_3d_projection.py  faces.py  manager.py  openvocab.py  plates.py  pointcloud.py  segmentation.py  types.py  virtual_camera.py
backend/src/backend/data/: __init__.py  augmentation.py  calibration.py  duplicates.py  fusion.py  models.py  projection.py  qa.py  report.py  ros_types.py  rosbag_parser.py  splitting.py  yolo_annotations.py
backend/src/backend/scripts/: __init__.py  analyzer.py  behavior.py  docker_executor.py  env_executor.py  generator.py  templates.py  validator.py
backend/tests/: test_health.py  test_llm_routes.py  test_ollama.py
backend/tests/agent/: test_graph.py  test_state.py
backend/tests/agent/checkpoints/: __init__.py  test_integration.py  test_manager.py  test_saver.py
backend/tests/agent/llm/: conftest.py  test_config.py  test_integration.py  test_models.py  test_provider.py  test_tools.py
backend/tests/agent/nodes/: __init__.py  test_execution.py  test_hitl.py  test_planning.py  test_router.py
backend/tests/agent/tools/: conftest.py  test_base.py  test_convert.py  test_custom_script_alias.py  test_cv_tools.py  test_duplicates.py  test_export.py  test_pointcloud_tools.py  test_qa.py  test_registry.py  test_review_queue.py  test_scan.py  test_split.py  test_stubs.py
backend/tests/api/: test_detect3d_routes.py  test_pointcloud_routes.py  test_review_routes.py
backend/tests/api/streaming/: __init__.py  test_batching.py  test_endpoints.py  test_events.py
backend/tests/cv/: __init__.py  test_anonymization.py  test_anonymization_3d.py  test_base.py  test_detection.py  test_detection_3d.py  test_device.py  test_download.py  test_faces.py  test_manager.py  test_openvocab.py  test_plates.py  test_pointcloud.py  test_segmentation.py  test_types.py
backend/tests/data/: __init__.py  conftest.py  test_augmentation.py  test_calibration.py  test_coco_loader.py  test_cvat_loader.py  test_duplicates.py  test_formats_base.py  test_fusion.py  test_kitti_loader.py  test_models.py  test_nuscenes_loader.py  test_openlabel_loader.py  test_projection.py  test_qa.py  test_report.py  test_ros_types.py  test_rosbag_parser.py  test_splitting.py  test_voc_loader.py  test_yolo_loader.py
backend/tests/scripts/: test_env_executor.py
docs/: ARCHITECTURE_MULTI_USER.md  (+1 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: docker.rs  lib.rs  main.rs  sidecar.rs  state.rs
src-tauri/src/commands/: llm.rs  mod.rs  ollama.rs  pointcloud.rs  sidecar.rs  system.rs
src-tauri/src/pointcloud/: convert.rs  decimate.rs  error.rs  io.rs  mod.rs  types.rs
(+331 files in other folders)
