[package]
name = "cloumask"
version = "0.1.0"
description = "Local-first agentic CV data processing"
authors = ["Cloumask Team"]
edition = "2021"

[lib]
name = "cloumask_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
thiserror = "1"
log = "0.4"
env_logger = "0.11"
bollard = "0.17"

# Point cloud processing
pasture-core = "0.5"
pasture-io = "0.5"
ply-rs-bw = "2"
rand = "0.8"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
